initial support for commands (ping) pop up invitation for chats that user is already in

--- a/Campfire/Campfire-Info.plist
+++ b/Campfire/Campfire-Info.plist
@@ -30,6 +30,7 @@
 		<string>IMServiceCapabilityGroupListSupport</string>
 		<string>IMServiceCapabilityGroupListHandlePictureSupport</string>
 		<string>IMServiceCapabilityPresenceSupport</string>
+		<string>IMServiceCapabilityInstantMessagingSupport</string>
 	</array>
 	<key>IMServiceIcon</key>
 	<string>Logo.png</string>
