--- a/Campfire/Campfire-Info.plist
+++ b/Campfire/Campfire-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Logo.png</string>
+	<string>Campfire.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>net.g-Off.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -33,7 +33,7 @@
 		<string>IMServiceCapabilityInstantMessagingSupport</string>
 	</array>
 	<key>IMServiceIcon</key>
-	<string>Logo.png</string>
+	<string>Campfire.icns</string>
 	<key>IMUsesEnableSSLAccountSetting</key>
 	<true/>
 	<key>IMUsesPasswordAccountSetting</key>
