addition of the NSLogger to replace LumberJack moving network operation creation code into single location

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "AFNetworking"]
 	path = AFNetworking
 	url = git://github.com/AFNetworking/AFNetworking.git
+[submodule "NSLogger"]
+	path = NSLogger
+	url = git://github.com/fpillet/NSLogger.git
